# ground_segmentation_ros

./: README.md
ground_segment/: CMakeLists.txt  README.md  package.xml
ground_segment/include/: ground_segment.hpp  ground_segment_handle.hpp
ground_segment/src/: ground_segment.cpp  ground_segment_handle.cpp  main.cpp
src/ground_segment/: CMakeLists.txt  package.xml
src/ground_segment/config/: ground_segment.yaml
src/ground_segment/include/: ground_segment.hpp  ground_segment_handle.hpp
src/ground_segment/launch/: ground_segment.launch
src/ground_segment/src/: ground_segment.cpp  ground_segment_handle.cpp
